Half done bookinstance update

--- a/express-locallibrary-tutorial/views/bookinstance_form.pug
+++ b/express-locallibrary-tutorial/views/bookinstance_form.pug
@@ -4,14 +4,17 @@ block content
   h1=title
 
   form(method='POST' action='')
-    div.form-group
-      label(for='book') Book:
-      select#book.form-control(type='select' placeholder='Select book' name='book' required='true')
-        for book in book_list
-          if bookinstance
-            option(value=book._id selected=(bookinstance.book.toString()==book._id.toString() ? 'selected' : false)) #{book.title}
-          else
-            option(value=book._id) #{book.title}
+    if book_list
+      div.form-group
+        label(for='book') Book:
+        select#book.form-control(type='select' placeholder='Select book' name='book' required='true')
+          for book in book_list
+            if bookinstance
+              option(value=book._id selected=(bookinstance.book.toString()==book._id.toString() ? 'selected' : false)) #{book.title}
+            else
+              option(value=book._id) #{book.title}
+    else
+      p #[strong Title:] #{bookinstance.book.title}
 
     div.form-group
       label(for='imprint') Imprint:
