--- a/express-locallibrary-tutorial/views/bookinstance_form.pug
+++ b/express-locallibrary-tutorial/views/bookinstance_form.pug
@@ -15,13 +15,16 @@ block content
               option(value=book._id) #{book.title}
     else
       p #[strong Title:] #{bookinstance.book.title}
+      input(name='bookid', value=bookinstance.book._id, type='hidden')
+
+    p #[strong Title:] #{bookinstance.due_back}
 
     div.form-group
       label(for='imprint') Imprint:
       input#imprint.form-control(type='text' placeholder='Publisher and date information' name='imprint' required='true' value=(undefined===bookinstance ? '' : bookinstance.imprint))
     div.form-group
       label(for='due_back') Date when book available:
-      input#due_back.form-control(type='date' name='due_back' value=(undefined===bookinstance ? '' : bookinstance.due_back))
+      input#due_back.form-control(type='date' name='due_back' value=(undefined===bookinstance ? '' : bookinstance.due_back), placeholder=bookinstance.due_back)
 
     div.form-group
       label(for='status') Status:
@@ -34,6 +37,7 @@ block content
     button.btn.btn-primary(type='submit') Submit
 
   if errors
+    h3(style={color: 'red'}) Errors
     ul
       for error in errors
-        li!= error.msg
+        li(style={color: 'red'}) #{error.msg}
